tests/baselines/reference/compoundAdditionAssignmentLHSCannotBeAssigned.errors.txt
==== tests/cases/conformance/expressions/assignmentOperator/compoundAdditionAssignmentLHSCannotBeAssigned.ts (5 errors) ====
    // string can add every type, and result string cannot be assigned to below types
    enum E { a, b, c }
    
    var x1: boolean;
    x1 += '';
    ~~
!!! error TS2323: Type 'string' is not assignable to type 'boolean'.
    
    var x2: number;
    x2 += '';
    ~~
!!! error TS2323: Type 'string' is not assignable to type 'number'.
    
    var x3: E;
    x3 += '';
    ~~
!!! error TS2323: Type 'string' is not assignable to type 'E'.
    
    var x4: {a: string};
    x4 += '';
    ~~
!!! error TS2322: Type 'string' is not assignable to type '{ a: string; }':
!!! error TS2322:   Property 'a' is missing in type 'String'.
    
    var x5: void;
    x5 += '';
    ~~
!!! error TS2323: Type 'string' is not assignable to type 'void'.